--- a/public/css/application.css.scss
+++ b/public/css/application.css.scss
@@ -7,4 +7,7 @@ body { background-color: #fafafa; }
     border: none;
     background-color: #fcfcfc;
   }
+  textarea.five-hundred-characters {
+    height: 6.3125rem;
+  }
 }
